==> cutworthwang/AliOS-Things-1.3.0/platform/mcu/esp32/hal/wifi_port.c <==
#include <stdarg.h>
#include <stdio.h>
#include <string.h>
#include <aos/network.h>
#include "hal/wifi.h"
#include "esp_smartconfig.h"
#include "esp_wifi_types.h"
#include "esp_wifi.h"
#include "esp_event_loop.h"
#include "esp_timer.h"

static int wifi_init(hal_wifi_module_t *m)
{
    static int inited;
    if (inited)
        return 0;
    inited = 1;

    /* Hook Event */
    int ret = esp_event_loop_init(handle_event_cb, NULL);
    printf("%s:%d %d\n", __func__, __LINE__, ret);
    wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
    ESP_ERROR_CHECK( esp_wifi_init(&cfg) );
    return 0;
}

static int get_link_stat(hal_wifi_module_t *m,
                         hal_wifi_link_stat_t *out_stat)
{
    wifi_ap_record_t ap_info;

    if (ESP_OK == esp_wifi_sta_get_ap_info(&ap_info)) {
        out_stat->is_connected = 1;
        out_stat->wifi_strength = ap_info.rssi;
        memcpy(out_stat->ssid, ap_info.ssid, sizeof(out_stat->ssid));
        memcpy(out_stat->bssid, ap_info.bssid, sizeof(out_stat->bssid));
        out_stat->channel = ap_info.primary;
    }

    return 0;
}

static void start_scan_adv(hal_wifi_module_t *m)
{
    wifi_scan_helper(m, SCAN_ADV);
}

static int power_on(hal_wifi_module_t *m)
{
    printf("WiFi HAL %s not implemeted yet!\r\n", __func__);
    return 0;
}

static void start_monitor(hal_wifi_module_t *m)
{
    wifi_getset_ops(m, HAL_WIFI_PROMISCUOUS_START);
}

static void stop_monitor(hal_wifi_module_t *m)
{
    wifi_getset_ops(m, HAL_WIFI_PROMISCUOUS_STOP);
}

static void register_wlan_mgnt_monitor_cb(hal_wifi_module_t *m,
                                          monitor_data_cb_t fn)
{
    mngt_data_cb = fn;
    // Workaround for zero config <TODO>
    hal_wifi_register_monitor_cb(NULL, NULL);
    hal_wifi_start_wifi_monitor(NULL);
}

static int wlan_send_80211_raw_frame(hal_wifi_module_t *m,
                                     uint8_t *buf, int len)
{
    extern esp_err_t esp_wifi_80211_tx(wifi_interface_t ifx, const void *buffer, int len);
    ESP_ERROR_CHECK(esp_wifi_80211_tx(ESP_IF_WIFI_STA, buf, len));

    return 0;
}
