==> cutworthwang/AliOS-Things-1.3.0/platform/mcu/rtl8710bn/hal/wifi_port.c <==
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <hal/base.h>
#include <hal/wifi.h>
#include <platform/platform_stdlib.h>
#include <wifi/wifi_conf.h>
#include <wifi/wifi_util.h>
#include <wifi/wifi_ind.h>
#include <lwip_netconf.h>
#include <osdep_service.h>
#define  WIFI_CONNECT_MAX_ATTEMPT_COUNT  3

static int wifi_init(hal_wifi_module_t *m)
{
    wifi_on(RTW_MODE_STA);
    wifi_disable_powersave();   
    DBG_8195A("wifi init success!!\n");
    return 0;
}

static int get_link_stat(hal_wifi_module_t *m, hal_wifi_link_stat_t *out_stat)
{
    DBG_8195A("get_link_stat\r\n");

    u8 *ifname[2] = {WLAN0_NAME,WLAN1_NAME};
    rtw_wifi_setting_t setting;
    int rssi;
    wifi_get_setting((const char*)ifname[0],&setting);
    wifi_show_setting((const char*)ifname[0],&setting);
    out_stat->is_connected = wifi_is_ready_to_transceive(RTW_STA_INTERFACE)?0:1;
    wifi_get_rssi(&rssi);
    out_stat->wifi_strength = rssi;
    strcpy(out_stat->ssid, setting.ssid);
    out_stat->channel = setting.channel;
    
    return 0;
}

static void start_scan_adv(hal_wifi_module_t *m)
{
    DBG_8195A("start_scan_adv, %d\r\n", rtw_getFreeHeapSize());
    fATWS(NULL);        
    return;
}

static int power_on(hal_wifi_module_t *m)
{
    wifi_on(RTW_MODE_STA); 
    wifi_disable_powersave();      
    return 0;
}

static void start_monitor(hal_wifi_module_t *m)
{
    DBG_8195A("start_monitor\r\n");
    
#if CONFIG_AUTO_RECONNECT
    wifi_set_autoreconnect(RTW_AUTORECONNECT_DISABLE);
#endif
    
    wifi_enter_promisc_mode();

    return;
}

static void stop_monitor(hal_wifi_module_t *m)
{
    DBG_8195A("stop_monitor\r\n");

    wifi_set_promisc(RTW_PROMISC_DISABLE, NULL, 0);

#if CONFIG_AUTO_RECONNECT
    wifi_set_autoreconnect(RTW_AUTORECONNECT_INFINITE);
#endif
   
    return;
}

static void register_wlan_mgnt_monitor_cb(hal_wifi_module_t *m, monitor_data_cb_t fn)
{
    //DBG_8195A("register_wlan_mgnt_monitor_cb fn 0x%x\r\n", fn);

    g_mgnt_link_info.rssi = 0;
    g_mgnt_filter_callback = fn;

    wifi_set_indicate_mgnt(1);
    wifi_reg_event_handler(WIFI_EVENT_RX_MGNT, wifi_rx_mgnt_hdl, NULL);
    
    return;
}

static int wlan_send_80211_raw_frame(hal_wifi_module_t *m, uint8_t *buf, int len)
{
    int ret = 0;
    const char *ifname = WLAN0_NAME;
   
    ret = wext_send_mgnt(ifname, (char*)buf, len, 1);
    return 0;
}
